--- a/LearningTask-5.4/Views/Base.lproj/Main.storyboard
+++ b/LearningTask-5.4/Views/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -14,57 +14,57 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AutorFormViewController" customModule="LearningTask_5_4" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MaP-nk-1h8">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Nm3-az-Ihl" userLabel="Container Stack View">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoTypo" translatesAutoresizingMaskIntoConstraints="NO" id="Ye2-9L-fWm" userLabel="Logo Image View">
-                                        <rect key="frame" x="20" y="0.0" width="374" height="36"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" image="LogoTypo" translatesAutoresizingMaskIntoConstraints="NO" id="Ye2-9L-fWm" userLabel="Logo Image View">
+                                        <rect key="frame" x="20" y="0.0" width="280" height="36"/>
                                         <color key="tintColor" name="Sawtooth Aak"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="r3r-R2-YwW"/>
                                         </constraints>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="Osl-s2-4hT" userLabel="Avatar Image View">
-                                        <rect key="frame" x="20" y="60" width="374" height="140"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="747" verticalCompressionResistancePriority="749" image="Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="Osl-s2-4hT" userLabel="Avatar Image View">
+                                        <rect key="frame" x="20" y="60" width="280" height="78"/>
                                         <color key="tintColor" name="Sawtooth Aak"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="140" id="N1E-MT-4Xd"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="140" id="N1E-MT-4Xd"/>
                                         </constraints>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Ops-To-CgA" userLabel="Form Stack View">
-                                        <rect key="frame" x="20" y="224" width="374" height="502"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="754" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Ops-To-CgA" userLabel="Form Stack View">
+                                        <rect key="frame" x="20" y="162" width="280" height="314"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="RnL-IM-5UO" userLabel="Foto Stack View">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="62.5"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="RnL-IM-5UO" userLabel="Foto Stack View">
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="62.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Foto:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="riZ-Jx-DgE" userLabel="Foto Label Input">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="280" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="https://domain.com/photos/photo.png" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HFl-mf-vcI" userLabel="Foto Text Field">
-                                                        <rect key="frame" x="0.0" y="28.5" width="374" height="34"/>
+                                                        <rect key="frame" x="0.0" y="28.5" width="280" height="34"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PAc-jT-OJb" userLabel="Nome Stack View">
-                                                <rect key="frame" x="0.0" y="78.5" width="374" height="62.5"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PAc-jT-OJb" userLabel="Nome Stack View">
+                                                <rect key="frame" x="0.0" y="78.5" width="280" height="62.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hSW-tp-OE3" userLabel="Nome Label Input">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="280" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Autor do Livro" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5pR-8i-okd" userLabel="Nome Text Field">
-                                                        <rect key="frame" x="0.0" y="28.5" width="374" height="34"/>
+                                                        <rect key="frame" x="0.0" y="28.5" width="280" height="34"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
@@ -72,46 +72,46 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5Tb-vi-f9M" userLabel="Bio Stack View">
-                                                <rect key="frame" x="0.0" y="157" width="374" height="62.5"/>
+                                                <rect key="frame" x="0.0" y="157" width="280" height="62.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9r2-2d-ebf" userLabel="Bio Label Input">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="280" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Descrição do autor em poucas palavras" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HE5-HU-ve0" userLabel="Bio Text Field">
-                                                        <rect key="frame" x="0.0" y="28.5" width="374" height="34"/>
+                                                        <rect key="frame" x="0.0" y="28.5" width="280" height="34"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zeL-0r-NaF" userLabel="Tecnologias Stack View">
-                                                <rect key="frame" x="0.0" y="235.5" width="374" height="62.5"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zeL-0r-NaF" userLabel="Tecnologias Stack View">
+                                                <rect key="frame" x="0.0" y="235.5" width="280" height="62.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tecnologias:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z0V-PH-bhW" userLabel="Tecnologias Label Input">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="280" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Swift; Desenvolvimento iOS; JavaScript" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oht-zs-tKd" userLabel="Tecnologias Text Field">
-                                                        <rect key="frame" x="0.0" y="28.5" width="374" height="34"/>
+                                                        <rect key="frame" x="0.0" y="28.5" width="280" height="34"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
-                                            <view contentMode="scaleToFill" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="q3d-q6-cdl" userLabel="Padding View">
-                                                <rect key="frame" x="0.0" y="314" width="374" height="188"/>
+                                            <view contentMode="scaleToFill" verticalHuggingPriority="246" verticalCompressionResistancePriority="746" translatesAutoresizingMaskIntoConstraints="NO" id="q3d-q6-cdl" userLabel="Padding View">
+                                                <rect key="frame" x="0.0" y="314" width="280" height="0.0"/>
                                             </view>
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bpv-GM-zFJ" userLabel="Salvar Button">
-                                        <rect key="frame" x="20" y="750" width="374" height="48"/>
+                                        <rect key="frame" x="20" y="500" width="280" height="48"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="X6H-1P-1sW"/>
                                         </constraints>
